# mujoco-pi-plus-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt  sim2sim_runner.py  sim_manager.py
app/: runner.py  runtime_config.py  sim_manager.py  soccer_referee.py
assets/config/: match_config.json
assets/environments/soccer/: THIRD_PARTY_LICENSE.md  world.xml
assets/robots/pi_plus/: pi_plus.urdf  pi_plus.usd  pi_plus.xml
src/mujoco_pi_plus_sim/: __init__.py  gait_policy.py  multi_robot_sim.py  runner.py  runtime_config.py  sim_manager.py  webview_server.py
tools/: cmd_vel_node.py  control_mux.py  external_gait_controller.py  gait_node.py  head_control_node.py  policy_timing_driver.py  zmq_cmdvel_client.py
web/manager/: api_docs.html  index.html
web/templates/: THIRD_PARTY_NOTICE.md  index.html
